tests/paczka1/small_fuzzy/48450004.err
Error in line 2: PEJg S434 52,3
Error in line 4: A68 S434 82,2
Error in line 5: bVVmeBeHzaH A808 77,9
